fix: 프론트 연동을 위한 로그인, 회원가입 흐름, 시 정보 다중값 입력 수정